completed header section like: logo, navbar & btn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Hello developers!!</h1>
+    <!-- header section  -->
+    <header>
+        <!-- logo  -->
+        <div class="logo">
+            <a href="/">
+                <img src="images/logo.png" alt="SmartSeed School Logo" class="logo">
+            </a>
+        </div>
+        <!-- menu items  -->
+        <nav class="nav-items">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#schools">Schools</a></li>
+                <li><a href="#studying">Studying</a></li>
+            </ul>
+        </nav>
+        <!-- sign in & sign up  -->
+         <div class="menu-btns">
+            <a href="#signin" class="btn">Sign In</a>
+            <a href="#signup" class="signup-btn">Sign Up</a>
+         </div>
+    </header>
 </body>
 </html>
